--- a/src/demos/shoe-picker/styles.css
+++ b/src/demos/shoe-picker/styles.css
@@ -13,7 +13,7 @@
   left: 140px;
   padding: 0;
   margin: 40px;
-  font-size: 5em;
+  font-size: 5rem;
   font-weight: 400;
   line-height: 0.7em;
   letter-spacing: -2px;
